--- a/code/styles/style.css
+++ b/code/styles/style.css
@@ -1,48 +1,3 @@
-.product-card {
-    width: 300px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 20px auto;
-    overflow: hidden;
-}
-
-.product-card img {
-    width: 100%;
-    height: auto;
-}
-
-.product-details {
-    padding: 20px;
-}
-
-.product-details h2 {
-    margin-top: 0;
-}
-
-.price {
-    font-size: 1.2em;
-}
-
-.buy-button {
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    width: 100%;
-}
-
-.buy-button:hover {
-    background-color: #45a049;
-}
-
-
-
-
-
-
-
-
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -114,6 +69,43 @@ body {
 }
 
 /* main */
+
+
+.main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.product {
+    width: 200px;
+    height: 400px;
+    text-align: center;
+    margin: 10px 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px #000;
+    background-color: #fff;
+}
+
+.product__photo {
+    width: 100%;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.product__information {
+    padding: auto;
+    margin: 5px;
+}
+
+.product__button {
+    cursor: pointer;
+    margin: 5px;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    background-color: #4caf50;
+}
 
 /* footer */
 
